[metadata]
name = visualapplets
version = attr: visualapplets.__version__
author = Juergen Hock
author_email = juergen.hock@jurihock.de
url = https://github.com/jurihock/visualapplets.py
description = Python bindings for Basler's VisualApplets TCL script generation.
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL-2.0
license_file = LICENSE
keywords =
    automation
    basler
    camera
    cameralink
    dsp
    fpga
    framegrabber
    gigevision
    high-performance
    image-processing
    kintex7
    machine-vision
    microenable
    prototyping
    python
    real-time
    siso
    tcl
    visualapplets
    xilinx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Tcl
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: System :: Hardware
    Topic :: Utilities

[options]
py_modules = visualapplets
